--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html data-bs-theme="dark" lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link href="/vite.svg" rel="icon" type="image/svg+xml"/>
+    <link href="/cat.png" rel="icon" type="image/svg+xml"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>smacdo.com</title>
 </head>
